stylesheets/jbt-styles.scss
/* ... */
// ****************************************
// Events
// ****************************************
.event {
  .title {
    .info {
      color: rgb(119, 119, 119);
      font-weight: bold;
    }
    
    h3 {
      margin-top: 2em;
      margin-bottom: 0;
    }
  }
  .content {
    margin-top: 2em;
    margin-bottom: 4em;
  }
}

// ****************************************
// Installation
// ****************************************
@media screen and (min-width: 680px) {
  // DEPRECATED
  /*
  #downloads {
    display: flex;
    justify-content: space-between;
    align-items: stretch;
    .download-unit {
      position: relative;
      margin-bottom: 1em;
      padding: 1em;
      #min-height: 25em;
      height: auto;  
  
      h3 {
        text-align: center;
      }
      ul {
        text-align: center;
        list-style-type: square;
        margin-bottom: 2em;
        li {
          margin-left: 1em;
          line-height: 2em;
          text-align: left;
        }
      }
      .download-btn {
        margin-left: -1em; 
        position: absolute; 
        bottom: 0em;
        width: 100%;
        text-align: center;
      }
    }
    
    .download-unit:first-child::after {
      @include vertical-right_ruler(1px);
    }
  }
  */
  
  .hero-unit {
    .hero-left {
      float: left;
      display: inline;
      margin-bottom: 2em;    

      width: 45%;
        text-align: right;
      h1 {
      }
      a {
        margin-top: 1em;
      }
    }
    .hero-right {
      float: right;
      display: inline;
      width: 45%;
      margin-bottom: 2em;    
      ul {
        list-style-type: none;
      }
    }
  }
  
  hr {
    content: "";
    clear: both;
  }
  
}

.links {
  a {
    margin-right: 0.0em;
  }
  span {
    padding-top: 4px;
    line-height: 20px;
  }
  position: relative;
  float: right;
}


#release_info {
  margin-top: 2em;
  margin-bottom: 2em;
}

#displayed-version > .label {
  vertical-align: top;
}

#installation_tabs {
  margin-top: 2em;
  .nav-tabs > .active > a {
  }
}

#installation-tabs-content {
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 2em;
  /*border-left: 1px solid rgb(221, 221, 221);
  border-right: 1px solid rgb(221, 221, 221);
  border-bottom: 1px solid rgb(221, 221, 221);
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;*/
  //background: rgb(243, 243, 243);
  padding-top: 20px;
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
  
}
#download {
  margin-top: 30px;
}

#all-downloads, #installation-tabs-content {
  table {
    margin-top: 2em;
    margin-bottom: 4em;
    tr {
      text-align: left;
      &:nth-child(2n+1) {
        background: rgb(245, 245, 245)
      }
      &:nth-child(2n) {
        background: rgb(255, 255, 255);  
      }
      th, td {
        border: 1px solid rgb(221, 221, 221);
        padding-top: 5px;
        padding-bottom: 5px;
        padding-left: 10px;
        padding-right: 10px;
      }
    }
  }
}

// align labels on the right in the #all-downloads table
#all-downloads table {
  td {
    width: 20%;
    vertical-align: top;
  }
  & .label {
   float: right;
  }
}

.download-instructions {
  h3 {
    margin-top: 0;
  }
  h4 {
    margin-top: 2em;
    & + div {
      display: block;
      padding: 1em;
      line-height: 20px;
      border: 1px solid rgb(221, 221, 221);
      border-radius: 4px 4px 4px 4px;
      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.055);
    }
  }
  .nav-tabs > .active > a {
    color: rgb(101, 101, 101);
  }
}

span.label {
  font-weight: normal;
  text-shadow: none;
  &#displayed-version {
    vertical-align:top;
  }
  
  &.label_stable, &.label_latest_release {
    background-color: rgb(70, 136, 71);
  }
  &.label_development {
    background-color: rgb(58, 135, 173);
  }
  &.label.label_nightly {
    background-color: rgb(248, 148, 6);
  }
  &.float-right {
    font-size: smaller;
  }
}

.sidenav  li:first-child  a {
    border-radius: 6px 6px 0 0;
}

.sidenav > li:last-child > a {
    
}

.sidenav .active  a {
    border: 0 none;
    box-shadow: 1px 0 0 rgba(0, 0, 0, 0.1) inset, -1px 0 0 rgba(0, 0, 0, 0.1) inset;
    padding: 9px 15px;
    position: relative;
    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
    z-index: 2;
}


// *************************************
// Features
// *************************************
.features {
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 10px;
  padding-right: 10px;
  
  a {
    width: 100%;
    text-align: center;
  }

  img {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
}

@media screen and (min-width: 940px) {
  .feature {
    .sect1 {
      //position: relative;
      margin-bottom: 2em;
      &::before {
        @include horizontal-bottom-ruler(1px);
      }
      &:last-child::before {
        content: "";
        background-image: none;
      }
      &::after {
        display:block;
        clear:both;
        margin-bottom: 2em;
        content: ""; // mandatory content, even empty
      }
    }
  
    .sect2 {
      padding-top: 20px;
    }
  
    $space: 48%;
    .sect1:nth-child(odd) {
      H2, .sect2 > :not(.imageblock) {
        float: left;
        clear: left;
        width: $space;
      }
      .sect2 > .imageblock {
        float: right;
        margin-top: -4em;
        width: $space;
      }
    } 
  
    .sect1:nth-child(even) { 
      H2, .sect2 > :not(.imageblock) {
        float: right;
        clear: right;
        width: $space;
      }
      .sect2 > .imageblock {
        float: left;
        margin-top: -4em;
        width: $space;
      }
    }  
  }
}

.tableblock {
  margin-bottom: 1em;
  th, td {
    border: 1px solid rgb(101, 101, 101);
    padding: 4px;
  }
}

// *************************************
// News / Blog posts
// *************************************
@mixin header($font-size) {
  font-size: $font-size;
  text-decoration: none;
  text-align: left;
  color: #4A5D75;
}
/* ... */

